<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="20dp"
    tools:context=".TestingForClass">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Testing App"
        android:textSize="25sp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Enter first no"/>

    <EditText
        android:id="@+id/etFirstno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Enter second no"/>

    <EditText
        android:id="@+id/etSecondno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/btnSum"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="SUM"
        />

    <Button
        android:id="@+id/btnSub"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="Subtract"
        />

    <Button
        android:id="@+id/btnDivide"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="Divide"
        />

</LinearLayout>